{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 17,
  "lineage": "d651d219-647a-3bfe-924e-ad5d40845372",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ca3ca175f37dd66",
            "arn": "arn:aws:ec2:us-east-1:684653686068:instance/i-070219c2e304df657",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070219c2e304df657",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "projectv1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a5f0a704a30b18cb",
            "private_dns": "ip-172-31-94-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.94.71",
            "public_dns": "ec2-52-23-200-200.compute-1.amazonaws.com",
            "public_ip": "52.23.200.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05548f1f9fd0ae615",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "demo-project-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c1332dde94b99b7",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-040ddca5e7a3b42e0"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dpw-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684653686068:internet-gateway/igw-06892b2e879bd07bf",
            "id": "igw-06892b2e879bd07bf",
            "owner_id": "684653686068",
            "tags": {
              "Name": "dpw-igw"
            },
            "tags_all": {
              "Name": "dpw-igw"
            },
            "vpc_id": "vpc-0717df6d841f29051"
          },
          "dependencies": [
            "aws_vpc.dpw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dpw-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684653686068:route-table/rtb-0f4562d8b944dfda8",
            "id": "rtb-0f4562d8b944dfda8",
            "owner_id": "684653686068",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06892b2e879bd07bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dpw-public-rt"
            },
            "tags_all": {
              "Name": "dpw-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0717df6d841f29051"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dpw-igw",
            "aws_vpc.dpw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dpw-rta-public-subent-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0687cb3291eca8be7",
            "route_table_id": "rtb-0f4562d8b944dfda8",
            "subnet_id": "subnet-044921d04b703e879"
          },
          "dependencies": [
            "aws_internet_gateway.dpw-igw",
            "aws_route_table.dpw-public-rt",
            "aws_subnet.dpw-public_subent_01",
            "aws_vpc.dpw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-project-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684653686068:security-group/sg-040ddca5e7a3b42e0",
            "description": "SSH Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040ddca5e7a3b42e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo-project-sg",
            "name_prefix": "",
            "owner_id": "684653686068",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-port"
            },
            "tags_all": {
              "Name": "ssh-port"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8e7e4e89b767925"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dpw-public_subent_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684653686068:subnet/subnet-044921d04b703e879",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044921d04b703e879",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "684653686068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dpw-public_subent_01"
            },
            "tags_all": {
              "Name": "dpw-public_subent_01"
            },
            "vpc_id": "vpc-0717df6d841f29051"
          },
          "dependencies": [
            "aws_vpc.dpw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dpw-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684653686068:vpc/vpc-0717df6d841f29051",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03ca1f1e70cfdde6e",
            "default_route_table_id": "rtb-0e22abce224a040df",
            "default_security_group_id": "sg-004dec3edba0d635c",
            "dhcp_options_id": "dopt-01b3b03d72791add6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0717df6d841f29051",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e22abce224a040df",
            "owner_id": "684653686068",
            "tags": {
              "Name": "dpw-vpc"
            },
            "tags_all": {
              "Name": "dpw-vpc"
            }
          }
        }
      ]
    }
  ]
}